@@ -129,6 +129,10 @@
      [clientloop.c]
      I was coalescing expected global request confirmation replies at
      the wrong end of the queue - fix; prompted by markus@
+   - grunk@cvs.openbsd.org 2008/06/12 21:14:46
+     [ssh-keygen.c]
+     make ssh-keygen -lf show the key type just as ssh-add -l would do it
+     ok djm@ markus@
   - (dtucker) [clientloop.c serverloop.c]  channel_register_filter now
     takes 2 more args.  with djm@
 
@@ -4293,4 +4297,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4990 2008/06/12 22:56:01 dtucker Exp $
+$Id: ChangeLog,v 1.4991 2008/06/12 22:57:27 dtucker Exp $
